--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
 body{
- color : blue;	
- background-color: green;
+ color : black;	
+ background-color: #FFB6C1;
+ text-align: center;
 }
+
+   .link {
+    border: 1px solid #333; /* Рамка */
+    display: inline-block;
+    padding: 5px 15px; /* Поля */
+    text-decoration: none; /* Убираем подчёркивание */
+    color: #000; /* Цвет текста */
+  }
+   .link:hover {
+    box-shadow: 0 0 5px rgba(0,0,0,0.3); /* Тень */
+    background: linear-gradient(to bottom, #fcfff4, #e9e9ce); /* Градиент */
+    color: #a00;
+   }
+   .blockEl {
+   	display: block;
+   	margin: 10px auto;
+   }
